# server/openapi.yaml
@@ -1147,6 +1147,18 @@ paths:
             type: string
             format: object-id
           description: The ID of the job fair to delete
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - hostUsername
+              properties:
+                hostUsername:
+                  type: string
+                  description: The username of the job fair host
       responses:
         '200':
           description: Job fair successfully deleted.
